Bugzilla Bug 114858 [Xlib] Xlib toolkit broken because timer gets created before nsAppShell is initalised patch by Roland.Mainz@informatik.med.uni-giessen.de r=timeless sr+a=blizzard